fixed z-index for carto window

--- a/src/sass/src/view/component/CartoWindow.scss
+++ b/src/sass/src/view/component/CartoWindow.scss
@@ -15,6 +15,7 @@
 .cartowindow {
   position: relative;  /* containing block for headings (top:0) */
   background: #999;
+  z-index: 0;
 }
 
 .cartowindow > .closeElement {
